traefik-beetroot/traefik.yaml
# Service for Traefik with NodePort access for external requests
apiVersion: v1
kind: Service
metadata:
  name: web-server-traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: web
      nodePort: 30080
---
# Defines a deployment for the Traefik reverse proxy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-deployment
  namespace: kube-system
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-service-account
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
            - --api.insecure=true
            - --entrypoints.web.Address=:80
            - --providers.kubernetesingress
            - --providers.kubernetescrd
            - --providers.kubernetescrd.namespaces=exercise02,kube-system
          ports:
            - name: web
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /dashboard/
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /dashboard/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
