traefik-beetroot/beet-ingress.yaml
# Defines the IngressClass for Traefik to specify Traefik as the ingress controller
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-ingress-class
spec:
  controller: traefik.io/ingress-controller
---
# Ingress resource to route requests to the beetroot-service in exercise02 namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex02-ingress
  namespace: exercise02
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: ex02-custom-headers@kubernetescrd
spec:
  ingressClassName: traefik-ingress-class
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beetroot-service  # Updated to match the service name in exercise02 namespace
                port:
                  number: 80
---
# Middleware to add a custom response header for requests routed through Traefik
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ex02-custom-headers
  namespace: exercise02
spec:
  headers:
    customResponseHeaders:
      X-Custom-Response-Header: "Routed by Traefik. (Exercise-02)"
